CKEditor scrollbar fix

--- a/assets/ckeditor-bootstrap/scss/includes/_content.scss
+++ b/assets/ckeditor-bootstrap/scss/includes/_content.scss
@@ -12,7 +12,7 @@
   border: $cke-content-border;
   background-clip: padding-box;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   outline: 0;
 
   .cke_focus & {
